Bug 304177 - Kmenuedit shows the "Name" and "Description" of menu items in random order.
Summary: Kmenuedit shows the "Name" and "Description" of menu items in random order.
Status: RESOLVED FIXED
Alias: None
Product: kmenuedit
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.8
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 273183 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-28 13:00 UTC by Jekyll Wu
Modified: 2012-07-29 02:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jekyll Wu 2012-07-28 13:00:50 UTC
There is no predictable order in how kmenuedit shows the "Name" and "Description" in the tree view between different invocation. Sometimes, it uses the "Name (Description)" format, sometime it uses the "Description (Name)", sometime it just uses the "Name" format.


Reproducible: Always

Steps to Reproduce:
Run kmenuedit, observe how it displays "Name" and "Description" in the left-side treeview 
Actual Results:  
There is no predicate order 

Expected Results:  
There should be a predictable order.
Comment 1 Jekyll Wu 2012-07-28 13:12:38 UTC
https://git.reviewboard.kde.org/r/105769/
Comment 2 Jekyll Wu 2012-07-29 01:44:36 UTC
Git commit accddc18bf85850e001c63cfb1d083f4bd9c4b89 by Jekyll Wu.
Committed on 28/07/2012 at 14:49.
Pushed by jekyllwu into branch 'KDE/4.9'.

Fix the random order of Name and Description
FIXED-IN: 4.9.1

REVIEW: 105769

M  +2    -1    kmenuedit/treeview.cpp

http://commits.kde.org/kde-workspace/accddc18bf85850e001c63cfb1d083f4bd9c4b89
Comment 3 Jekyll Wu 2012-07-29 01:48:00 UTC
Git commit 440c1a8b2f3332dcd184a3d463c732f136c4b7b8 by Jekyll Wu.
Committed on 28/07/2012 at 14:49.
Pushed by jekyllwu into branch 'master'.

Fix the random order of Name and Description
FIXED-IN: 4.9.1

REVIEW: 105769

M  +2    -1    kmenuedit/treeview.cpp

http://commits.kde.org/kde-workspace/440c1a8b2f3332dcd184a3d463c732f136c4b7b8
Comment 4 Jekyll Wu 2012-07-29 02:39:02 UTC
*** Bug 273183 has been marked as a duplicate of this bug. ***