Fix the random order of Name and Description

BUG: 304177
FIXED-IN: 4.9.1

REVIEW: 105769